@@ -1,7 +1,8 @@
 package fi.csc.chipster.tools.model;
 
 /**
- * Basepair coordinate: base(pair) location and chromosome. The basic coordinate used throughout the Genome Browser.
+ * Basepair coordinate: base(pair) location and chromosome. The basic coordinate
+ * used throughout the Genome Browser.
  *
  */
 public class BpCoord implements Comparable<BpCoord> {
@@ -16,9 +17,8 @@ public class BpCoord implements Comparable<BpCoord> {
 		this.chr = chr;
 	}
 
-	@SuppressWarnings("deprecation")
 	public BpCoord(BpCoord o) {
-		this(new Long(o.bp), new Chromosome(o.chr));
+		this(Long.valueOf(o.bp), new Chromosome(o.chr));
 	}
 
 	public BpCoord clone() {
@@ -26,7 +26,7 @@ public class BpCoord implements Comparable<BpCoord> {
 	}
 
 	public int compareTo(BpCoord o) {
-		
+
 		int chrComparison = chr.compareTo(o.chr);
 
 		if (chrComparison != 0) {
@@ -35,10 +35,10 @@ public class BpCoord implements Comparable<BpCoord> {
 			return bp.compareTo(o.bp);
 		}
 	}
-	
+
 	public int compareTo(Long o) {
 
-		return bp.compareTo(o);		
+		return bp.compareTo(o);
 	}
 
 	public boolean equals(Object o) {
@@ -55,7 +55,7 @@ public class BpCoord implements Comparable<BpCoord> {
 	}
 
 	public Long minus(BpCoord o) {
-		
+
 		if (chr.equals(o.chr)) {
 			return bp - o.bp;
 		}
